# c-data-structures

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  Makefile.am  README.md  config.h  configure.ac  main.c  testapp  vector.c  vector.h
cmake/: CMocka.cmake  CodeCov.cmake
data-structures/: common.h  list.h  map.h  queue.h  stack.c  stack.h  vector.c  vector.h
headers/: stack.h  vector.h
implementation/: list.c  map.c  queue.c  stack.c  vector.c
include/cdatastructures/: common.h  list.h  map.h  queue.h  stack.h  vector.h
src/: Makefile.am  list.c  main.c  map.c  queue.c  stack.c  vector.c
src/data-structures/: list.h  map.h  queue.h  stack.h  vector.h
src/implementation/: list.c  map.c  queue.c  stack.c  vector.c
src/tests/: list_tests.h  map_tests.h  queue_tests.h  stack_tests.h
test/: CMakeLists.txt
test/src/: list_tests.c  map_tests.c  queue_tests.c  stack_tests.c  test.h  vector_tests.c
tests/: common.h  list_tests.h  map_tests.h  queue_tests.h  stack_tests.h  tests.h  vector_tests.h
